--- a/styles/main.less
+++ b/styles/main.less
@@ -4,6 +4,16 @@ body {
   background-color: #211E3A;
 }
 
+p, li, a, strong, td{
+  font-family: Ubuntu;
+  font-weight: 700;
+}
+
+td {
+  color: #e0e8f0;
+  vertical-align:top;
+}
+
 .terminal-window {
   text-align: left;
   width: 680px;
