--- a/styles/main.less
+++ b/styles/main.less
@@ -84,6 +84,10 @@ td {
     p, li {
       font-weight: 400;
     }
+
+    .sudo {
+      height: 60%;
+    }
   }
 
   .contact {
@@ -102,8 +106,9 @@ td {
 
   .input {
     outline-color:  #30353a;
-    border:         none;
-    display:        inline-block;
+    border: none;
+    display: inline-flex;
+    resize: none;
   }
 
   .root {
