changed directory prompt

--- a/styles/main.less
+++ b/styles/main.less
@@ -100,7 +100,7 @@ td {
   }
 
   a {
-    text-align: center;
+    // text-align: center;
     display: block;
   }
 
@@ -111,16 +111,20 @@ td {
     resize: none;
   }
 
-  .root {
+  .home {
     color: #95F584;
   }
 
-  .tick {
-    color: #EC4891;
+  .insta {
+    color: #F77737;
   }
 
   .blue {
     color: #59d6ff;
+  }
+  
+  .white {
+    color: #e0e8f0;
   }
 
   .gray {
