styled to ubuntu terminal

--- a/styles/main.less
+++ b/styles/main.less
@@ -72,7 +72,7 @@ td {
     color: white;
     font-family: Ubuntu, @font-family;
     font-size: 11pt;
-    background: #30353a;
+    background: #300a24;
     padding: 10px;
     box-sizing: border-box;
     position: absolute;
