--- a/styles/main.less
+++ b/styles/main.less
@@ -40,31 +40,42 @@ td {
   }
 
   header {
-    background: #e0e8f0;
+    background: #2C2C2C;
     height: 30px;
     border-radius: 8px 8px 0 0;
     padding-left: 10px;
+    padding-right: 10px;
+    text-align: right;
 
     .button {
-      width: 12px;
-      height: 12px;
-      margin: 10px 4px 0 0;
+      width: 18px;
+      height: 18px;
+      margin: 5px 4px 0 0;
       display: inline-block;
-      border-radius: 8px;
+      border-radius: 20px;
+      text-align: center;
+      vertical-align: middle;
     }
 
     .button.green {
-      background: #3bb662;
+      // background: #3bb662;
       cursor: pointer;
+      padding-top: 5px;
+      font-size: 8pt;
     }
 
     .button.yellow {
-      background: #e5c30f;
+      // background: #e5c30f;
       cursor: pointer;
+      padding-top: 5px;
+      font-size: 8pt;
     }
 
     .button.red {
-      background: #e75448;
+      // background: #e75448;
+      cursor: pointer;
+      margin-top: 5px;
+      font-size: 12pt;
     }
   }
 
