directory blue filxed as per ubuntu default

--- a/styles/main.less
+++ b/styles/main.less
@@ -131,6 +131,10 @@ td {
   }
 
   .blue {
+    color: #3030fc;
+  }
+
+  .li-blue {
     color: #59d6ff;
   }
   
@@ -143,7 +147,7 @@ td {
   }
 
   .dir {
-    color: #59d6ff;
+    color: #3030fc;
   }
 
   .green {
