--- a/styles/main.less
+++ b/styles/main.less
@@ -22,22 +22,9 @@ td {
   margin: auto;
   position: relative;
   display: block;
-  top: 20vh;
+  // top: 20vh;
   transition: all 0.5s ease;
-  z-index: 9999;
-
-  &.minimized {
-    height: 30px;
-    top: calc(100vh - 38px);
-    width: 250px;
-  }
-  
-  &.fullscreen {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-  }
+  // z-index: 9999;
 
   header {
     background: #2C2C2C;
@@ -188,13 +175,7 @@ td {
   display: none;
 }
 
-@media only screen and (max-width: 650px){
-  .terminal-window {
-    width: 95%;
-    height: 60vh;
-    top: 10vh;
-  }
-
+@media only screen and (max-width: 650px) {
   .footer {
     bottom: 20px;
   }
