pretty ui 2 tabs done

--- a/styles/main.less
+++ b/styles/main.less
@@ -2,6 +2,8 @@
 
 body {
   background-color: #211E3A;
+  margin: 10px;
+  font-family: Ubuntu;
 }
 
 p, strong {
@@ -175,7 +177,7 @@ td {
   display: none;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 680px) {
   .footer {
     bottom: 20px;
   }
