--- a/styles/flip.less
+++ b/styles/flip.less
@@ -19,11 +19,12 @@
   z-index: 9999;
 }
 
-@media only screen and (max-width: 650px){
+@media only screen and (max-width: 680px){
   .flip-box {
     width: 95%;
     height: 60vh;
     top: 10vh;
+    z-index: 9999;
   }
 
   .minimized {
