--- a/styles/main.less
+++ b/styles/main.less
@@ -4,7 +4,7 @@ body {
   background-color: #211E3A;
   margin: 10px;
   font-family: Ubuntu;
-  background-image: url("data/wall.png");
+  background-image: url("../data/wall.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
