removed w3 css and made manual style fixes

--- a/styles/flip.less
+++ b/styles/flip.less
@@ -1,13 +1,13 @@
 .flip-box {
-  width: 680px;
-  height: 400px;
+  width: 110vh;
+  height: 65vh;
   margin: auto;
-  top: 20vh;
+  top: 10vh;
 }
 
 .minimized {
   height: 30px;
-  top: calc(100vh - 38px);
+  top: 75vh;
   width: 250px;
 }
 
