--- a/styles/main.less
+++ b/styles/main.less
@@ -1,10 +1,10 @@
 @font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
 
 body {
-  background-color: #211E3A;
+  // background-color: #211E3A;
   margin: 10px;
   font-family: Ubuntu;
-  background-image: url("../data/wall.png");
+  background-image: url("../data/focal-fossa.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -164,7 +164,7 @@ td {
 
 .footer {
   position: absolute;
-  bottom: 40px;
+  top: 80vh;
   left: 0;
   right: 0;
   text-align: center;
@@ -172,6 +172,7 @@ td {
   color: white;
   font-family: @font-family;
   user-select: none;
+  z-index: -1;
 
   .flip-btn {
     font-weight: bold;
