--- a/styles/flip.less
+++ b/styles/flip.less
@@ -7,7 +7,7 @@
 
 .minimized {
   height: 30px;
-  top: 75vh;
+  top: 65vh;
   width: 250px;
 }
 
@@ -24,12 +24,12 @@
     width: 95%;
     height: 60vh;
     top: 10vh;
-    z-index: 9999;
+    // z-index: 9999;
   }
 
   .minimized {
     height: 30px;
-    top: calc(100vh - 38px);
+    top: 65vh;
     width: 250px;
   }
   
@@ -38,6 +38,6 @@
     height: 100%;
     top: 0;
     left: 0;
-    z-index: 9999;
+    // z-index: 9999;
   }
 }
