--- a/styles/main.less
+++ b/styles/main.less
@@ -73,6 +73,16 @@ td {
     }
   }
 
+  .header-title {
+    margin-top: 8px;
+    // display: inline-block;
+    text-align: left;
+    // vertical-align: middle;
+    font-size: 10pt;
+    color: white;
+    float: left;
+  }
+
   #terminal {
     color: white;
     font-family: Ubuntu, @font-family;
@@ -172,7 +182,7 @@ td {
   color: white;
   font-family: @font-family;
   user-select: none;
-  z-index: -1;
+  z-index: 2;
 
   .flip-btn {
     font-weight: bold;
