--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -111,6 +111,7 @@
   user-select: none;
   display: flex;
   align-items: center;
+  height: 25px;
 
   &:hover {
     background-color: #2F2F2F;
@@ -135,8 +136,8 @@
 .content {
   color: whitesmoke;
   // height: 100%;
-  overflow-y: scroll;
-  scrollbar-width: none;
+  // overflow-y: scroll;
+  // scrollbar-width: none;
   position: relative;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -168,6 +169,7 @@
     font-size: 30px;
     position: absolute;
     z-index: 10;
+    user-select: none;
   }
 }
 
