skills page content added

--- a/styles/main.less
+++ b/styles/main.less
@@ -32,6 +32,7 @@ td {
   // top: 20vh;
   transition: all 0.5s ease;
   // z-index: 9999;
+  background-color: #0D0D0D;
 
   header {
     background: #2C2C2C;
