--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -59,7 +59,7 @@
     padding-right: 30px;
     position: relative;
     color: #efefef;
-    text-align: justify;
+    // text-align: justify;
   }
 
   .about-li {
@@ -105,16 +105,13 @@
 
 
   .tech-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    float: left;
     font-size: 12pt;
-    padding-top: 20px;
 
     .big {
       font-size: 30pt;
-      padding-right: 5px;
-      vertical-align: super;
+      padding-right: 10px;
+      line-height: 1.4;
     }
   }
 }
