--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -103,6 +103,76 @@
     }
   }
 
+  .exp-section {
+    padding-left: 25px;
+    padding-right: 25px;
+    line-height: 1.5;
+  }
+
+  .exp-item {
+    padding-left: 5px;
+    padding-bottom: 5px;
+    
+    .exp-title-table {
+      width: 100%;
+
+      .logo {
+        vertical-align: middle;
+        width: 50px;
+      }
+
+      .title {
+        font-size: large;
+        color: #efefef;
+        text-align: left;
+        vertical-align: bottom;
+      }
+  
+      .time {
+        font-size: small;
+        color: #6d6d6d;
+        text-align: right;
+        vertical-align: bottom;
+      }
+
+      .desig {
+        font-size: medium;
+        color: #afafaf;
+        text-align: left;
+        vertical-align: top;
+      }
+      .location {
+        font-size: 14px;
+        color: #ccc;
+        text-align: right;
+        vertical-align: top;
+      }
+    }
+
+    .exp-desc-ul {
+      // text-align: justify;
+      line-height: 1.25;
+      list-style: disclosure-closed;
+      font-size: 11pt;
+      padding-left: 55px;
+      color: #cccccd;
+    }
+  }
+
+  .resume-frame {
+    height: 100%;
+    width: 100%;
+    border: 0;
+  }
+
+  .helptext {
+    text-align: center;
+    font-size: 10pt;
+    color: #cccccd;
+    margin-top: 0;
+    margin-bottom: 5px;
+  }
+
 
   .tech-container {
     float: left;
