Added loading screen

--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -1,5 +1,6 @@
+
 #leftcol {
-  width:180px;
+  width:25%;
   background-color: #272727;
   color: #d6d6d6;
   font-family: Ubuntu;
@@ -12,10 +13,11 @@
   z-index: -1;
   top: 30px;
   padding-bottom: 20px;
+  padding-top: 10px;
 }
 
 #rightcol {
-  margin-left: 180px; 
+  margin-left: 25%; 
   background-color: #0D0D0D;
   height: initial;
   display: block !important;
@@ -104,7 +106,7 @@
   }
 
   .exp-section {
-    padding-left: 25px;
+    padding-left: 10px;
     padding-right: 25px;
     line-height: 1.5;
   }
@@ -240,7 +242,7 @@
     transition: width 0.4s ease-in-out;
 
     &.active {
-      width: 180px;
+      width: 200px;
     }
   }
 
