--- a/styles/main.less
+++ b/styles/main.less
@@ -11,6 +11,36 @@ body {
   background-position: center;
 }
 
+.loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: #0D0D0D;
+  opacity: 1;
+
+  .ubuntu-logo {
+    margin: auto;
+    position: relative;
+    display: block;
+    max-width: 100%;
+    margin-top: 10vh;
+  }
+
+  .ubuntu-loading {
+    margin: auto;
+    position: relative;
+    display: block;
+    animation: rotation 2s infinite linear; 
+    @keyframes rotation {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(359deg); }
+    }
+  }
+}
+
 p, strong {
   font-family: Ubuntu;
   font-weight: 700;
