--- a/styles/main.less
+++ b/styles/main.less
@@ -11,6 +11,10 @@ body {
   background-position: center;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 .loader {
   position: fixed;
   left: 0px;
