--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -62,6 +62,7 @@
     position: relative;
     color: #efefef;
     // text-align: justify;
+    padding-bottom: 10px;
   }
 
   .about-li {
@@ -165,6 +166,9 @@
     height: 100%;
     width: 100%;
     border: 0;
+    background: url(../data/loading.svg);
+    background-repeat: no-repeat;
+    background-position: center 20px;
   }
 
   .helptext {
@@ -172,7 +176,7 @@
     font-size: 10pt;
     color: #cccccd;
     margin-top: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
 
 
