Added contact page in gui

--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -178,7 +178,14 @@
     margin-top: 0;
     margin-bottom: 10px;
   }
-
+  
+  .contact-tbl {
+    line-height: 1.25;
+    font-size: 11pt;
+    color: #cccccd;
+    margin: auto;
+    margin-top: 50px;
+  }
 
   .tech-container {
     float: left;
