added fab for flip

--- a/styles/main.less
+++ b/styles/main.less
@@ -209,6 +209,24 @@ td {
   color: white;
 }
 
+.fabFlip {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  z-index: 100;
+  background: #d3ff8263;
+  border-radius: 50%;
+  box-shadow: 2px 2px 3px #4b4b4b;
+  cursor:pointer;
+  border: 1px dotted #d3ff8263;
+
+  .flip-img {
+    height: 30px;
+    width: 30px;
+    padding: 7px;
+  }
+}
+
 .footer {
   position: absolute;
   top: 80vh;
