--- a/styles/main.less
+++ b/styles/main.less
@@ -214,16 +214,19 @@ td {
   bottom: 20px;
   right: 20px;
   z-index: 100;
-  background: #d3ff8263;
   border-radius: 50%;
-  box-shadow: 2px 2px 3px #4b4b4b;
+  box-shadow: 2px 2px 3px #c24619d6;
   cursor:pointer;
-  border: 1px dotted #d3ff8263;
+  border: 1px solid #c246198f;
 
   .flip-img {
     height: 30px;
     width: 30px;
     padding: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #cccccd;
   }
 }
 
