--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -177,6 +177,8 @@
     color: #cccccd;
     margin-top: 0;
     margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   
   .contact-tbl {
