--- a/styles/main.less
+++ b/styles/main.less
@@ -213,15 +213,16 @@ td {
   position: absolute;
   bottom: 20px;
   right: 20px;
-  z-index: 100;
+  z-index: 101;
   border-radius: 50%;
-  box-shadow: inset 0 0 8px 2px #c24619d6;
+  box-shadow: inset 0 0 10px 4px #c24619d6;
   cursor:pointer;
   user-select: none;
+  font-size: 14pt;
 
   .flip-img {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     padding: 7px;
     display: flex;
     justify-content: center;
@@ -229,7 +230,7 @@ td {
     color: #cccccd;
     
     &.animate {
-      animation: rotation 2s 2 linear; 
+      animation: rotation 2s infinite linear; 
       @keyframes rotation {
         from { transform: rotate(0deg); }
         to { transform: rotate(359deg); }
