--- a/styles/main.less
+++ b/styles/main.less
@@ -86,6 +86,13 @@ td {
       vertical-align: middle;
     }
 
+    .button.flip {
+      // background: #e5c30f;
+      cursor: pointer;
+      padding-top: 3px;
+      font-size: 10pt;
+    }
+
     .button.green {
       // background: #3bb662;
       cursor: pointer;
@@ -169,6 +176,9 @@ td {
 
   .insta {
     color: #F77737;
+  }
+  .gold {
+    color: gold;
   }
 
   .blue {
