--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -54,6 +54,10 @@
       font-size: medium;
       color: bisque;
     }
+    br{
+      display: block;
+      margin: 2px 0;
+    }
   }
 
   .about-ul {
@@ -69,6 +73,24 @@
     padding-left: 10px;
     padding-bottom: 15px;
     font-size: 11pt;
+  }
+
+  .about-para {
+    font-size: 11pt;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    position: relative;
+    color: #efefef;
+    font-weight: normal;
+    line-height: 1.3;
+    text-align: center;
+
+    br {
+      display: block;
+      margin: 10px 0;
+    }
+    
   }
 
   .head-title {
@@ -91,18 +113,22 @@
     .title {
       font-size: large;
       color: #efefef;
+      margin: 3px;
     }
     .year {
       font-size: small;
-      color: #6d6d6d;
+      color: #888787;;
+      margin: 3px;
     }
     .course {
       font-size: medium;
       color: #afafaf;
+      margin: 3px;
     }
     .grade {
       font-size: 14px;
       color: #ccc;
+      margin: 3px;
     }
   }
 
