--- a/styles/prettyUI.less
+++ b/styles/prettyUI.less
@@ -148,6 +148,12 @@
       .logo {
         vertical-align: middle;
         width: 50px;
+
+        img {
+          border-radius: 8px;
+          padding: 5px;
+          width: inherit;
+        }
       }
 
       .title {
