--- a/styles/prettyUI.css
+++ b/styles/prettyUI.css
@@ -276,6 +276,12 @@
   margin: 0 auto;
 }
 
+.nav-opener:focus-visible {
+  outline: 2px solid #2C6DB2;
+  outline-offset: 2px;
+  border-radius: 4px;
+}
+
 @media only screen and (max-width: 680px){
   #rightcol {
     margin-left: 0;
