--- a/styles/main.css
+++ b/styles/main.css
@@ -196,8 +196,8 @@ html, body {
 .window.fullscreen {
   top: 0 !important;
   left: 0 !important;
-  width: calc(100% - 32px) !important;
-  height: calc(100% - 32px) !important;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .window.minimized .resize-handle {
