--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-  margin: 10px;
+  margin: 0;
   font-family: Ubuntu, sans-serif;
   min-height: 100vh;
   background-image: url("../data/focal-fossa.jpg");
